# NovaVision

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mailmap  .zenodo.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MODEL_CARD.md  Makefile  PREREGISTRATION.md  PROVENANCE.md  README.md  RUNBOOK.md  SECURITY.md  THIRD_PARTY_LICENSES.md  app.py  index.html  pyproject.toml  reproduce.ipynb  requirements-dev.txt  requirements.txt  server.py  spaces_config.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
benchmark/: submission.schema.json
data/: DATASHEET.md  README.md  content_bank.txt
data/lexicon/: affect_lexicon.tsv
docs/: human_study_protocol.md
novavision/: __init__.py  config.py  determinism.py  pipeline.py  prompting.py  serving.py  taxonomy.py
novavision/affect/: __init__.py  analyzer.py  lexicon.py
novavision/data/: __init__.py  build_benchmark.py
novavision/eval/: __init__.py  clip_affect.py  figures.py  human_study.py  metrics.py  probes.py  validate_probe.py
novavision/experiments/: __init__.py  manifest.py  run.py
novavision/generation/: __init__.py  base.py  diffusers_backend.py  hf_api_backend.py
paper/: paper.md  paper.tex  references.bib  tables.md
results/paper/: corrected_recovery.json  power_analysis.json  probe_validation.json  probe_validation_l14.json  probe_validation_scene.json  probe_validation_scene_l14.json  results.json
scripts/: compare_probes.py  correct_recovery.py  download_lexicon.py  make_submission.py  power_analysis.py  report.py  resummarize.py  smoke_server.sh
static/: index.html
tests/: conftest.py  test_analyzer.py  test_benchmark.py  test_build_benchmark.py  test_compare_probes.py  test_config.py  test_contracts.py  test_correct_recovery.py  test_download_lexicon.py  test_experiment.py  test_figures.py  test_generation.py  test_golden.py  test_human_study.py  test_lexicon.py  test_metrics.py  test_pipeline.py  test_power_analysis.py  test_probes.py  test_prompting.py  test_report.py  test_reproducible_bench.py  test_resummarize.py  test_security.py  test_server.py  test_serving.py  test_submission.py  test_taxonomy.py  test_validate_probe.py
tests/fixtures/: affectbench_sample.csv
