[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novavision"
version = "1.0.0"
description = "Emotion-controllable text-to-image generation and an affect-recovery benchmark"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "urme-b" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
app = ["flask>=3.0", "flask-cors>=4.0", "gradio>=4.0"]
ml = ["torch>=2.0", "transformers>=4.40", "diffusers>=0.27", "accelerate>=0.30", "huggingface-hub>=0.23"]
research = ["matplotlib>=3.7", "datasets>=2.18"]
dev = ["pytest>=8.0", "ruff>=0.5", "matplotlib>=3.7", "flask>=3.0", "flask-cors>=4.0"]

[project.urls]
Repository = "https://github.com/urme-b/NovaVision"

[tool.setuptools.packages.find]
include = ["novavision*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
