[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novavision"
dynamic = ["version"]
description = "Emotion-controllable text-to-image generation and an affect-recovery benchmark"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Urme Bose" }]
requires-python = ">=3.9"
keywords = [
    "emotion", "affective-computing", "text-to-image", "diffusion", "clip",
    "valence-arousal", "benchmark", "controllability", "reproducibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "pydantic>=2.5",
    # >=2.14 requires Python 3.10; this project supports 3.9 (requires-python).
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
app = ["flask>=3.0", "flask-cors>=4.0", "gunicorn>=21"]
ml = ["torch>=2.0", "transformers>=4.40", "diffusers>=0.27", "accelerate>=0.30", "huggingface-hub>=0.23"]
research = ["matplotlib>=3.7", "datasets>=2.18"]
dev = ["pytest>=8.0", "ruff>=0.5", "matplotlib>=3.7", "flask>=3.0", "flask-cors>=4.0", "gunicorn>=21"]

[project.urls]
Repository = "https://github.com/urme-b/NovaVision"

[tool.setuptools.packages.find]
include = ["novavision*"]

[tool.setuptools.dynamic]
version = { attr = "novavision.__version__" }

[tool.setuptools.package-data]
novavision = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["novavision"]

[tool.coverage.report]
fail_under = 80
show_missing = true
